src/objects/APTS_Agreement_Line_Account_Exclusion__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Agreement_Line_Account_Exclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Id__c</fullName>
        <formula>APTS_Agreement_Line_Item__r.Apttus__AgreementId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Line_Item__c</fullName>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipName>Agreement_Line_Account_Exclusions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Agreement_Line_Account_Exclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Category__c</fullName>
        <formula>IF(NOT(ISPICKVAL(APTS_Agreement_Line_Item__r.Category_Level__c,&apos;&apos;)),APTS_Agreement_Line_Item__r.Apttus_CMConfig__ClassificationId__r.Name,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <formula>APTS_Agreement_Line_Item__r.Apttus__ProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sold_To_Account_Id__c</fullName>
        <formula>APTS_Agreement_Line_Item__r.Apttus__AgreementId__r.Apttus__Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Category__c</fullName>
        <formula>IF(NOT(ISPICKVAL(APTS_Agreement_Line_Item__r.Category_Level__c,&apos;&apos;)),APTS_Agreement_Line_Item__r.APTS_Sub_Category__r.Name,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Sub_Category__c</fullName>
        <formula>IF(NOT(ISPICKVAL(APTS_Agreement_Line_Item__r.Category_Level__c,&apos;&apos;)),APTS_Agreement_Line_Item__r.APTS_Sub_Sub_Category__r.Name,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Sub Category</label>
        <type>Text</type>
    </fields>
    <label>Agreement Line - Account Exclusion</label>
    <nameField>
        <displayFormat>ALAE-{0000000000}</displayFormat>
        <label>Agreement Line Account Exclusion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Line - Account Exclusions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>